# dontSlouch

./: .gitignore  .gitmodules  README.md  graphs.ipynb
docs/: doxydocs
dontSlouch/: CMakeCache.txt  CMakeLists.txt  CameraTab.py  SettingsTab.py  backend.py  cmake_install.cmake  dontSlouch.qmlproject  main.py  progressTab.py  qmlmodules  slouch_detector.pt
dontSlouch/.qt/: QtDeploySupport.cmake
dontSlouch/.qt/deploy_qml_imports/: dontSlouchApp.cmake
dontSlouch/.qt_plugins/: Qt6_QmlPlugins_Imports_dontSlouchApp.rsp
dontSlouch/.rcc/: configuration.qrc  dontSlouchApp_raw_qml_0.qrc  qmake_Main.qrc
dontSlouch/.rcc/qmllint/: dontSlouchApp.rsp  dontSlouchApp_json.rsp  dontSlouchApp_module.rsp
dontSlouch/Source/API/Source/: manager.cpp
dontSlouch/Source/Common/Headers/: logging.hpp  stlheader.hpp
dontSlouch/Source/Editor/Headers/: editorHeaders.hpp  editorManager.hpp  editorRenderer.hpp  editorTheme.hpp
dontSlouch/Source/Editor/Source/: editorMain.cpp  editorManager.cpp  editorRenderer.cpp  editorTheme.cpp
dontSlouch/Source/Engine/Headers/: Vertex.hpp  buffers.hpp  device.hpp  engine.hpp  engineStructs.hpp  helper.hpp  swapchain.hpp  texture.hpp  validation.hpp  vulkanHeaders.hpp
dontSlouch/Source/Engine/Source/: buffers.cpp  device.cpp  engine.cpp  helper.cpp  swapchain.cpp  texture.cpp  validation.cpp
dontSlouch/content/: cmake_install.cmake
dontSlouch/content/.rcc/: content_raw_qml_0.qrc  qmake_content.qrc
dontSlouch/content/.rcc/qmllint/: content.rsp  content_json.rsp  content_module.rsp
dontSlouch/imports/: CMakeLists.txt  cmake_install.cmake
dontSlouch/imports/dontSlouch/: CMakeLists.txt  cmake_install.cmake  dontSlouchplugin_dontSlouchPlugin.cpp  dontSlouchplugin_init.cpp  qmldir
dontSlouch/imports/dontSlouch/.rcc/: dontSlouch_raw_qml_0.qrc  qmake_dontSlouch.qrc
dontSlouch/imports/dontSlouch/.rcc/qmlcache/: dontSlouch_qml_loader_file_list.rsp
dontSlouch/imports/dontSlouch/.rcc/qmllint/: dontSlouch.rsp  dontSlouch_json.rsp  dontSlouch_module.rsp
dontSlouch/imports/dontSlouch/designer/: plugin.metainfo
dontSlouch/include/: chronos.hpp
dontSlouch/qml/FlowView/: FlowView_qml_module_dir_map.qrc
dontSlouch/qml/Main/: dontSlouchApp_qml_module_dir_map.qrc
dontSlouch/qml/QtQuick/Studio/Application/: QuickStudioApplication_qml_module_dir_map.qrc
dontSlouch/qml/QtQuick/Studio/Components/: QuickStudioComponents_qml_module_dir_map.qrc
dontSlouch/qml/QtQuick/Studio/Effects/: QuickStudioEffects_qml_module_dir_map.qrc
dontSlouch/qml/QtQuick/Studio/EventSimulator/: QuickStudioEventSimulator_qml_module_dir_map.qrc
dontSlouch/qml/QtQuick/Studio/EventSystem/: QuickStudioEventSystem_qml_module_dir_map.qrc
dontSlouch/qml/QtQuick/Studio/LogicHelper/: QuickStudioLogicHelper_qml_module_dir_map.qrc
dontSlouch/qml/QtQuick/Studio/MultiText/: QuickStudioMultiText_qml_module_dir_map.qrc
dontSlouch/qml/QtQuick/Studio/Utils/: QuickStudioUtils_qml_module_dir_map.qrc
dontSlouch/qml/content/: Screen01.ui.qml  content_qml_module_dir_map.qrc
dontSlouch/qml/dontSlouch/: dontSlouch_qml_module_dir_map.qrc
dontSlouch/qmltypes/: dontSlouchApp_foreign_types.txt
dontSlouch/src/: import_qml_plugins.h
model/: data_preprocessing.ipynb  dontslouch.ipynb  scaler.pkl  slouch_detector.pt  tempCodeRunnerFile.py  test.py  testing.ipynb  training.ipynb
model/data/: au1badtr.csv  au1badval.csv  au1goodtr.csv  au1goodval.csv  badtr.csv  badtraining.csv  badval.csv  badvalidation.csv  finbadtrb.csv  finbadtrg.csv  finbadvalb.csv  finbadvalg.csv  fingoodtrg.csv  fingoodvalg.csv  goodtr.csv  goodtraining.csv  goodval.csv  goodvalidation.csv  newbadtrb.csv  newbadtrg.csv  newbadvalb.csv  newbadvalg.csv  newgoodtr.csv  newgoodval.csv
